--- a/css/style.css
+++ b/css/style.css
@@ -127,11 +127,23 @@ img {
 /************************************************
     SOLUZIONE RESPONSIVE
  ************************************************/
-@media screen and (max-width: 768px){
+/* bonus che comprende anche esercizio tablet */
+ @media screen and (max-width: 1160px){
+    .container{
+        width:100%;
+    }
+}
+
+
+
+
+/* @media screen and (max-width: 768px){
     .container{
         width: 100%;
     }
-}
+} */
+
+
 @media screen and (max-width: 480px) {
     .row{
         flex-direction: column;
